@@ -17,24 +17,24 @@ package org.apache.lucene.index;
  * limitations under the License.
  */
 
-import org.apache.lucene.util.BytesRef;
+import org.apache.lucene.util.BytesRefIterator;
 
 // TODO: maybe TermsFilter could use this?
 
-/** Iterates over terms in multiple fields, notifying the caller when a new field is started. */
-interface FieldTermIterator {
-  /** Advances to the next term, returning true if it's in a new field or there are no more terms.  Call {@link #field} to see which
-   *  field; if that returns null then the iteration ended. */
-  boolean next();
+/** Iterates over terms in across multiple fields.  The caller must
+ *  check {@link #field} after each {@link #next} to see if the field
+ *  changed, but {@code ==} can be used since the iterator
+ *  implementation ensures it will use the same String instance for
+ *  a given field. */
 
-  /** Returns current field, or null if the iteration ended. */
-  String field();
-
-  /** Returns current term. */
-  BytesRef term();
+abstract class FieldTermIterator implements BytesRefIterator {
+  /** Returns current field.  This method should not be called
+   *  after iteration is done.  Note that you may use == to
+   *  detect a change in field. */
+  abstract String field();
 
   /** Del gen of the current term. */
   // TODO: this is really per-iterator not per term, but when we use MergedPrefixCodedTermsIterator we need to know which iterator we are on
-  long delGen();
+  abstract long delGen();
 }
 
